[package]
name = "slimk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
figment = { version = "0.10.12", features = ["json", "env"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
